# Crm-Api-Python-client

./: .gitlab-ci.yml  .travis.yml  README.md  git_push.sh  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: Account.md  AccountManager.md  AccountStats.md  AccountUser.md  Addon.md  AddonList.md  AdminPanelApi.md  AgentsCount.md  AgentsStats.md  AsteriskHost.md  Attribute.md  AttributeSimple.md  AttributesApi.md  AwsRegion.md  BilledPeriod.md  BilledPeriodItem.md  BillingApi.md  BillingInfo.md  BillingMetric.md  BillingParameters.md  BillingStatus.md  BooleanResponse.md  CalculatedItem.md  CalculatedItems.md  CountriesApi.md  Country.md  Coupon.md  CouponApi.md  CouponsApi.md  Credentials.md  CustomDomain.md  Customer.md  DefaultDomain.md  DeletionMarker.md  DevApi.md  DevSignup.md  Discount.md  DiscountTemplate.md  DiscountValue.md  Domain.md  (+101 more)
test/: test_account.py  test_account_manager.py  test_account_stats.py  test_account_user.py  test_addon.py  test_addon_list.py  test_admin_panel_api.py  test_agents_count.py  test_agents_stats.py  test_asterisk_host.py  test_attribute.py  test_attribute_simple.py  test_attributes_api.py  test_aws_region.py  test_billed_period.py  test_billed_period_item.py  test_billing_api.py  test_billing_info.py  test_billing_metric.py  test_billing_parameters.py  test_billing_status.py  test_boolean_response.py  test_calculated_item.py  test_calculated_items.py  test_countries_api.py  test_country.py  test_coupon.py  test_coupon_api.py  test_coupons_api.py  test_credentials.py  test_custom_domain.py  test_customer.py  (+109 more)
(+149 files in other folders)
