[tool.poetry]
name = "qu.crm"
version = "1.0.0"
description = "CRM API"
authors = ["Michal Bebjak <support@qualityunit.com>"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/qualityunit/Crm-Api-Python-client"
keywords = ["OpenAPI", "OpenAPI-Generator", "CRM API"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
aiohttp = ">= 3.8.4"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
